# dmf

./: .buildinfo  .gitignore  LICENSE  README.md  dmf.html  dmf.py  example.py  fbenm.html  genindex.html  idpp_images.traj  index.html  interpolate.html  objects.inv  prod.xyz  py-modindex.html  pyproject.toml  react.xyz  requirements.txt  sample.py  search.html  searchindex.js  setup.py
.github/workflows/: tests.yml
_sources/: index.rst.txt  interpolate.rst.txt
docs/: Makefile  genindex.html  index.html  search.html  searchindex.js
docs/source/: conf.py  dmf.rst  fbenm.rst  index.rst
paper/: paper.bib  paper.md
src/dmf/: __init__.py  dmf.py  fbenm.py  interpolate.py
tests/: coefs.npy  test_dmf.py
