[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydmf"
version = "1.0.0"
description = "A Python package implementing the direct MaxFlux method and flat-bottom elastic network model for reaction path/transition state optimization."
keywords = ["reaction path", "transition state", "DFT", "MaxFlux", "elastic network model", "chemistry", "optimization"]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Shin-ichi Koda", email = "koda@ims.ac.jp" }
]
dependencies = [
    "ase>=3.22",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
]


[project.optional-dependencies]
cyipopt = ["cyipopt>=1.4"]
dev = [
    "pytest",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "ghp-import",
]


[project.urls]
Homepage = "https://github.com/shin1koda/dmf"
Source = "https://github.com/shin1koda/dmf"
Issues = "https://github.com/shin1koda/dmf/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["dmf*"]
exclude = ["tests"]

